# portfolio-v2

./: .env  .gitignore  README.md  RamiCV.html  findString.sh  package-lock.json  package.json  renderSvg.sh  svg.cabal
.github/workflows/: deploy-now.yaml
public/: index.html  manifest.json
src/: App.js  i18n.js  index.scss
src/assets/i18n/: en.js  es.js
src/assets/svg/: briefcase.jsx  document.jsx  flagES.jsx  flagUK.jsx  haskell.jsx  lambda.jsx  myLogo.jsx  sass.jsx
src/base/scss/: _animations.scss  _fonts.scss  _global.scss  _mixins.scss  _reset.scss  _variables.scss
src/base/svg/: Main.hs  RegularPolygon.jsx
src/core/contexts/: LangContext.jsx
src/core/layout/Header/: Header.jsx  _Header.scss
src/core/layout/LangNav/: LangNav.jsx  _LangNav.scss
src/core/layout/Logo/: Logo.jsx  _Logo.scss
src/core/layout/Nav/: Nav.jsx  _Nav.scss
src/core/layout/ScrollToTop/: ScrollToTop.jsx
src/pages/Contact/: Contact.jsx  _Contact.scss
src/pages/Cv/: Cv.jsx  _Cv.scss
src/pages/Home/: Home.jsx  _Home.scss
src/pages/Home/Hero/: Hero.jsx  _Hero.scss
src/pages/Projects/: Projects.jsx  _Projects.scss
src/pages/Projects/Project/: LogoCloister.jsx  LogoLolRaffle.jsx  LogoYiOracle.jsx  Project.jsx  _LogoLolRaffle.scss  _Project.scss
src/pages/SvgIcons/: SvgIcons.jsx  _SvgIcons.scss
src/pages/SvgIcons/MosaicCode/: MosaicCode.jsx  _MosaicCode.scss
src/pages/SvgIcons/MosaicGallery/: MosaicGallery.jsx  _MosaicGallery.scss
