cabal-version:      2.4
name:               svg
version:            1.0.0.0
homepage:           https://github.com/RamiroPastor/Portfolio
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ramiro
maintainer:         ramir659@icloud.com
copyright:          (c) Ramiro
category:           Graphics, Web

synopsis:           Svg

description: 
  Svg icons for this project


-- extra-source-files: CHANGELOG.md

library
  exposed-modules: 
    Main
  build-depends:    
    base >=4.15.0.0 && <5.0.0,
    blaze-markup >=0.5 && <0.9,
    blaze-svg >= 0.3.3.0 && < 1.0,
    directory >= 1.3.7.0 && <2.0.0,
    svg-icons >= 2.0.1.0
  hs-source-dirs:   src/base/svg
  default-language: Haskell2010

executable svg-exe
  default-language: Haskell2010
  hs-source-dirs: src/base/svg
  main-is: Main.hs
  build-depends:
    base >=4.15.0.0 && <5.0.0,
    blaze-markup >=0.5 && <0.9,
    blaze-svg >= 0.3.3.0 && < 1.0,
    directory >= 1.3.7.0 && <2.0.0,
    svg-icons >= 2.0.1.0
    

-- test-suite SvgIcons-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          TestRender.hs
--     build-depends:    
--       base ^>=4.15.0.0,
--       SvgIcons
